# Valve_diagnostic

./: README.md  pyproject.toml
valve_diagnostic/: cdf.py  main.py  notebook.ipynb  valve_diagnostics.py
